kyverno/policies/require-non-root/.chainsaw/bad.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-nonroot-01
spec:
  containers:
    - name: nginx
      image: nginx:latest
      securityContext:
        runAsUser: 0
