kyverno/policies/require-non-root/.chainsaw/policy-ready.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-run-as-non-root-user
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
